home page completed with responsive

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
-
   <title>Frontend Mentor | Space tourism website</title>
 
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="home">
   <header class="header">
     <div class="logo">
       <a href="index.html"><img src="./img/shared/logo.svg" alt="Space tourism"></a>
@@ -32,13 +31,24 @@
   </header>
   <!-- End Header Section========= -->
 
-  So, you want to travel to
-  Space
-  Let’s face it; if you want to go to space, you might as well genuinely go to
-  outer space and not hover kind of on the edge of it. Well sit back, and relax
-  because we’ll give you a truly out of this world experience!
+  <div class="container home__container">
+    <div class="left-column">
+      <h1 class="home__title">
+        So, you want to travel to
+        <span class="">Space</span>
+      </h1>
+      <p class="section__content">Let’s face it; if you want to go to space, you might as well genuinely go to
+      outer space and not hover kind of on the edge of it. Well sit back, and relax
+      because we’ll give you a truly out of this world experience!</p>
+    </div>
 
-  Explore
+    <div class="right-column">
+      <a href="#" class="btn-lg">Explore</a>
+    </div>
+  </div>
+  <!-- End Home Container Section========= -->
+
+
 
 
   <script src="./js/script.js"></script>
