--- a/index.html
+++ b/index.html
@@ -31,21 +31,23 @@
   </header>
   <!-- End Header Section========= -->
 
-  <div class="container home__container">
-    <div class="left-column">
+  <main class="container home__container">
+    <div class="home__content">
       <h1 class="home__title">
         So, you want to travel to
-        <span class="">Space</span>
+        <span class="title-1">Space</span>
       </h1>
       <p class="section__content">Let’s face it; if you want to go to space, you might as well genuinely go to
       outer space and not hover kind of on the edge of it. Well sit back, and relax
       because we’ll give you a truly out of this world experience!</p>
     </div>
+    <!-- Home Content -->
 
-    <div class="right-column">
+    <div class="home__btn">
       <a href="#" class="btn-lg">Explore</a>
     </div>
-  </div>
+    <!-- Home btn -->
+  </main>
   <!-- End Home Container Section========= -->
 
 
