--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
   <title>Frontend Mentor | Space tourism website</title>
 
+  <!-- Css Files========= -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="home">
@@ -22,7 +23,7 @@
     <nav>
       <ul class="navigation" id="mainMenu">
         <li class="active"><a href="index.html"><span>00</span> Home</a></li>
-        <li><a href="destination-moon.html"><span>01</span> Destination</a></li>
+        <li><a href="destination.html"><span>01</span> Destination</a></li>
         <li><a href="crew-commander.html"><span>02</span> Crew</a></li>
         <li><a href="technology-vehicle.html"><span>03</span> Technology</a></li>
       </ul>
@@ -48,11 +49,12 @@
     </div>
     <!-- Home btn -->
   </main>
-  <!-- End Home Container Section========= -->
+  <!-- End page container========= -->
 
 
 
 
+  <!-- JS Files========= -->
   <script src="./js/script.js"></script>
 </body>
 </html>
