--- a/crew.html
+++ b/crew.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <title>Frontend Mentor | Space tourism website</title>
 
-  <!-- Css Files========= -->
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="home">
+<body class="crew">
   <header class="header">
     <div class="logo">
       <a href="index.html"><img src="./img/shared/logo.svg" alt="Space tourism"></a>
@@ -22,9 +21,9 @@
 
     <nav>
       <ul class="navigation" id="mainMenu">
-        <li class="active"><a href="index.html"><span>00</span> Home</a></li>
+        <li><a href="index.html"><span>00</span> Home</a></li>
         <li><a href="destination.html"><span>01</span> Destination</a></li>
-        <li><a href="crew.html"><span>02</span> Crew</a></li>
+        <li class="active"><a href="crew.html"><span>02</span> Crew</a></li>
         <li><a href="technology.html"><span>03</span> Technology</a></li>
       </ul>
     </nav>
@@ -32,29 +31,20 @@
   </header>
   <!-- End Header Section========= -->
 
-  <main class="container home__container">
+  <div class="container home__container">
     <div class="home__content">
-      <h1 class="home__title">
-        So, you want to travel to
-        <span class="title-1">Space</span>
+      <h1 class="title-3">
+        Crew Commander
       </h1>
-      <p class="section__content">Let’s face it; if you want to go to space, you might as well genuinely go to
-      outer space and not hover kind of on the edge of it. Well sit back, and relax
-      because we’ll give you a truly out of this world experience!</p>
+      <p class="section__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis tempora expedita numquam eaque blanditiis quidem quasi sed, impedit quod sunt placeat ab porro neque id cum unde fugiat? Impedit, dicta?!</p>
     </div>
-    <!-- Home Content -->
 
-    <div class="home__btn">
-      <a href="#" class="btn-lg">Explore</a>
-    </div>
-    <!-- Home btn -->
-  </main>
-  <!-- End page container========= -->
+  </div>
+  <!-- End Home Container Section========= -->
 
 
 
 
-  <!-- JS Files========= -->
   <script src="./js/script.js"></script>
 </body>
 </html>
