--- a/destination.html
+++ b/destination.html
@@ -24,8 +24,8 @@
       <ul class="navigation" id="mainMenu">
         <li><a href="index.html"><span>00</span> Home</a></li>
         <li class="active"><a href="destination.html"><span>01</span> Destination</a></li>
-        <li><a href="crew-commander.html"><span>02</span> Crew</a></li>
-        <li><a href="technology-vehicle.html"><span>03</span> Technology</a></li>
+        <li><a href="crew.html"><span>02</span> Crew</a></li>
+        <li><a href="technology.html"><span>03</span> Technology</a></li>
       </ul>
     </nav>
     <!-- Main Navbar -->
@@ -40,6 +40,21 @@
       <picture class="moon active">
         <source srcset="./img/destination/image-moon.webp" type="image/webp">
         <img src="./img/destination/image-moon.png" alt="Moon">
+      </picture>
+
+      <picture class="mars">
+        <source srcset="./img/destination/image-mars.webp" type="image/webp">
+        <img src="./img/destination/image-mars.png" alt="Mars">
+      </picture>
+
+      <picture class="europa">
+        <source srcset="./img/destination/image-europa.webp" type="image/webp">
+        <img src="./img/destination/image-europa.png" alt="Europa">
+      </picture>
+
+      <picture class="titan">
+        <source srcset="./img/destination/image-titan.webp" type="image/webp">
+        <img src="./img/destination/image-titan.png" alt="Titan">
       </picture>
     </div>
     <!-- Destination Images -->
@@ -71,6 +86,60 @@
       </div>
     </article>
     <!-- End Destination Moon -->
+
+    <article class="destination__block">
+      <h2 class="title-2"> Mars </h2>
+      <p class="destination__details section__content">Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons,  the tallest planetary mountain in our solar system. It’s two and a half times the size of Everest!</p>
+
+      <div class="destination__statistics flex">
+        <div class="flex destination__info">
+          <span class="avg-dest">Avg. distance</span>
+          <span class="length">225 mil. km</span>
+        </div>
+
+        <div class="flex destination__info">
+          <span class="avg-dest">Est. travel time</span>
+          <span class="length">9 months</span>
+        </div>
+      </div>
+    </article>
+    <!-- End Destination Mars -->
+
+    <article class="destination__block">
+      <h2 class="title-2"> Europa </h2>
+      <p class="destination__details section__content">The smallest of the four Galilean moons orbiting Jupiter, Europa is a winter lover’s dream. With an icy surface, it’s perfect for a bit of ice skating, curling, hockey, or simple relaxation in your snug  wintery cabin.</p>
+
+      <div class="destination__statistics flex">
+        <div class="flex destination__info">
+          <span class="avg-dest">Avg. distance</span>
+          <span class="length">628 mil. km</span>
+        </div>
+
+        <div class="flex destination__info">
+          <span class="avg-dest">Est. travel time</span>
+          <span class="length">3 years</span>
+        </div>
+      </div>
+    </article>
+    <!-- End Destination Europa -->
+
+    <article class="destination__block">
+      <h2 class="title-2"> Titan </h2>
+      <p class="destination__details section__content">The only moon known to have a dense atmosphere other than Earth, Tita is a home away from home (just a few hundred degrees colder!). As a bonus, you get striking views of the Rings of Saturn.</p>
+
+      <div class="destination__statistics flex">
+        <div class="flex destination__info">
+          <span class="avg-dest">Avg. distance</span>
+          <span class="length">1.6 bil. km</span>
+        </div>
+
+        <div class="flex destination__info">
+          <span class="avg-dest">Est. travel time</span>
+          <span class="length">7 years</span>
+        </div>
+      </div>
+    </article>
+    <!-- End Destination Titan -->
     <!-- Destination Content -->
   </main>
   <!-- End page container========= -->
