convert css into one file

--- a/technology.html
+++ b/technology.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <title>Frontend Mentor | Space tourism website</title>
 
+  <!-- Css Files========= -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="technology">
@@ -45,6 +46,7 @@
 
 
 
+  <!-- JS Files========= -->
   <script src="./js/script.js"></script>
 </body>
 </html>
