updated tab img, content & menu class

--- a/destination.html
+++ b/destination.html
@@ -37,22 +37,22 @@
     <!-- Page Title -->
 
     <div class="destination__img">
-      <picture class="moon active">
+      <picture class="tab-img moon active">
         <source srcset="./img/destination/image-moon.webp" type="image/webp">
         <img src="./img/destination/image-moon.png" alt="Moon">
       </picture>
 
-      <picture class="mars">
+      <picture class="tab-img mars">
         <source srcset="./img/destination/image-mars.webp" type="image/webp">
         <img src="./img/destination/image-mars.png" alt="Mars">
       </picture>
 
-      <picture class="europa">
+      <picture class="tab-img europa">
         <source srcset="./img/destination/image-europa.webp" type="image/webp">
         <img src="./img/destination/image-europa.png" alt="Europa">
       </picture>
 
-      <picture class="titan">
+      <picture class="tab-img titan">
         <source srcset="./img/destination/image-titan.webp" type="image/webp">
         <img src="./img/destination/image-titan.png" alt="Titan">
       </picture>
@@ -60,16 +60,16 @@
     <!-- Destination Images -->
 
     <div class="destination__tabs">
-      <ul class="tab-list">
-        <li><a class="active" href="#">Moon</a></li>
-        <li><a href="#">Mars</a></li>
-        <li><a href="#">Europa</a></li>
-        <li><a href="#">Titan</a></li>
+      <ul class="tab-list flex">
+        <li><a class="tab-link active" href="#">Moon</a></li>
+        <li><a class="tab-link" href="#">Mars</a></li>
+        <li><a class="tab-link" href="#">Europa</a></li>
+        <li><a class="tab-link" href="#">Titan</a></li>
       </ul>
     </div>
     <!-- Destination Tab -->
 
-    <article class="destination__block active">
+    <article class="tab-content destination__block active">
       <h2 class="title-2"> Moon </h2>
       <p class="destination__details section__content">See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.</p>
 
@@ -87,7 +87,7 @@
     </article>
     <!-- End Destination Moon -->
 
-    <article class="destination__block">
+    <article class="tab-content destination__block">
       <h2 class="title-2"> Mars </h2>
       <p class="destination__details section__content">Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons,  the tallest planetary mountain in our solar system. It’s two and a half times the size of Everest!</p>
 
@@ -105,7 +105,7 @@
     </article>
     <!-- End Destination Mars -->
 
-    <article class="destination__block">
+    <article class="tab-content destination__block">
       <h2 class="title-2"> Europa </h2>
       <p class="destination__details section__content">The smallest of the four Galilean moons orbiting Jupiter, Europa is a winter lover’s dream. With an icy surface, it’s perfect for a bit of ice skating, curling, hockey, or simple relaxation in your snug  wintery cabin.</p>
 
@@ -123,7 +123,7 @@
     </article>
     <!-- End Destination Europa -->
 
-    <article class="destination__block">
+    <article class="tab-content destination__block">
       <h2 class="title-2"> Titan </h2>
       <p class="destination__details section__content">The only moon known to have a dense atmosphere other than Earth, Tita is a home away from home (just a few hundred degrees colder!). As a bonus, you get striking views of the Rings of Saturn.</p>
 
