crew page completed

--- a/crew.html
+++ b/crew.html
@@ -32,16 +32,51 @@
   </header>
   <!-- End Header Section========= -->
 
-  <div class="container home__container">
-    <div class="home__content">
-      <h1 class="title-3">
-        Crew Commander
-      </h1>
-      <p class="section__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis tempora expedita numquam eaque blanditiis quidem quasi sed, impedit quod sunt placeat ab porro neque id cum unde fugiat? Impedit, dicta?!</p>
-    </div>
+  <div class="container crew__container">
+    <h1 class="page-title crew__title"><span>02</span> MEET YOUR CREW</h1>
+    <!-- Page Title -->
 
+    <article class="crew__content">
+      <h5 class="subtitle">Commander</h5>
+      <h2 class="title-3">Douglas Hurley</h2>
+      <p class="section__content">Douglas Gerald Hurley is an American engineer, former Marine Corps pilot and former NASA astronaut. He launched into space for the third time as commander of Crew Dragon Demo-2.</p>
+    </article>
+    <!-- Crew Commander content -->
+    <!-- Crew content -->
+
+    <ul class=" dot-circle flex crew__dots">
+      <li>
+        <a href="#" class="dot-circle-btn">
+          <span class="sr-only">Commander</span>
+        </a>
+      </li>
+      <li>
+        <a href="#" class="dot-circle-btn tab-link">
+          <span class="sr-only">Mission Specialist </span>
+        </a>
+      </li>
+      <li>
+        <a href="#" class="dot-circle-btn tab-link">
+          <span class="sr-only">PILOT</span>
+        </a>
+      </li>
+      <li>
+        <a href="#" class="dot-circle-btn tab-link">
+          <span class="sr-only">Flight Engineer</span>
+        </a>
+      </li>
+    </ul>
+    <!-- Dot Circle -->
+
+    <div class="crew__img">
+      <picture class="commander">
+        <source srcset="./img/crew/image-douglas-hurley.webp" type="image/webp">
+        <img src="./img/crew/image-douglas-hurley.png" alt="douglas-hurley">
+      </picture>
+    </div>
+    <!-- Crew Images -->
   </div>
-  <!-- End Home Container Section========= -->
+  <!-- End Crew Container Section========= -->
 
 
 
