--- a/destination.html
+++ b/destination.html
@@ -33,7 +33,7 @@
   <!-- End Header Section========= -->
 
   <main class="container destination__container">
-    <h1 class="page-title destination__title">01 Pick your destination</h1>
+    <h1 class="page-title destination__title"><span>01</span> Pick your destination</h1>
     <!-- Page Title -->
 
     <div class="destination__img">
